--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -8,6 +8,7 @@ COPY . .
 RUN npm run build
 
 FROM nginx:1.27-alpine
+RUN apk update && apk upgrade --no-cache
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
